--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Site de Castor Marcelin, administrateur réseau en recherche d'alternance.">
+  <meta name="description" content="Site de Castor Marcelin, futur administrateur réseau .">
   <meta property="og:title" content="Castor Marcelin - Administrateur Réseau">
-  <meta property="og:description" content="Découvrez mon parcours et contactez-moi pour une alternance.">
+  <meta property="og:description" content="Découvrez mon parcours .">
   <meta property="og:image" content="lien_image_pour_partage.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CASTOR Marcelin - Votre futur Administrateur Réseau</title>
@@ -100,3 +100,4 @@
   </footer>
 </body>
 </html>
+
