--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="formation">
     <h2>Formation</h2>
     <ul>
-      <li><strong>Schola Nova</strong> – Titre professionnel TSSR – <em>2025–2026</em></li>
+      <li><strong>Lycée Montmorency</strong> – BTS SIO option SISR – <em>2025–2026</em></li>
       <li><strong>Lycée Maryse Condé</strong> – Bac SN, mention AB – <em>2023–2024</em></li>
       <li><strong>Collège Stendhal</strong> – Brevet, mention AB – <em>2020–2021</em></li>
     </ul>
@@ -106,3 +106,4 @@
   </footer>
 </body>
 </html>
+
